# PyQt5-template

./: cookiecutter.json
{{cookiecutter.repo_name}}/: main.py  pyproject.toml
